# bmkg-api

./: .env.example  .gitignore  API_SUMMARY.md  DEPLOYMENT_OPTIONS.md  Dockerfile  INSTALL.md  LICENSE  MCP_REGISTRY.md  MCP_SETUP.md  Makefile  README.md  TESTING.md  docker-compose.test.yml  docker-compose.yml  mcp_server.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  smithery.yaml  tailwind.config.js  test_server.py  vercel.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy-api.yml  deploy.yml  docker-publish.yml  publish-mcp.yml  test.yml
api/: index.py
app/: cache.py  config.py  dependencies.py  http_client.py  main.py  openapi.py
app/models/: __init__.py  earthquake.py  enums.py  nowcast.py  responses.py  weather.py  wilayah.py
app/parsers/: cap_parser.py  earthquake_parser.py  rss_parser.py  weather_parser.py
app/routers/: __init__.py  earthquake.py  health.py  nowcast.py  weather.py  wilayah.py
app/services/: earthquake_service.py  nowcast_service.py  weather_service.py  wilayah_service.py
landing/: index.html  mcp-setup.html  output.css  self-host.html
mcp_server/: __init__.py  cache.py  client.py  http_server.py  mcp_instance.py  server.py  utils.py
mcp_server/tools/: __init__.py  earthquake.py  nowcast.py  region.py  weather.py
tests/: conftest.py  test_earthquake.py  test_integration.py  test_nowcast.py  test_weather.py  test_wilayah.py
tests/fixtures/: autogempa.json  cap_banten.xml  cap_jateng.xml  forecast_response.json  gempadirasakan.json  gempaterkini.json  rss_active.xml
tests/mcp/: conftest.py  test_earthquake_tools.py  test_nowcast_tools.py  test_region_tools.py  test_utils.py  test_weather_tools.py
