[project]
name = "bmkg-api"
version = "1.0.0"
description = "BMKG API - Indonesian Weather & Earthquake Data"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "slowapi>=0.1.9",
    "cachetools>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["*/tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
fail_under = 70

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
